# StatusBar-Codex-Linux

./: .gitignore  Cargo.toml  README.md  build.rs  codex.pid  install.sh  once.out
StatusBar-Codex-Linux/: AGENT_INSTALL.md  LICENSE-MIT  README.md  StatusBar-Codex-Linux.desktop.example  codex-usage-tray  install.sh
src/: config.rs  main.rs  mascot.rs  paths.rs  status.rs
